[workspace]
default-members = ["rss"]

[workspace.package]
version = "0.0.1"
authors = ["ah-OOG-ah"]
edition = "2021"
license = "LGPL-3.0-or-later"
publish = false

[package]
name = "rssb"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rss = { path = "rss" }

[build-dependencies]
spirv-builder = "0.9.0"

[profile.release-with-debug]
inherits = "release"
debug = true
